syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "ips/shared/bff/v1/bff.proto";

package ips.bff.v1;


service BFFService {
    //Get
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {
    string testMessage = 1;
}

message HealthCheckResponse {
    string response = 1;
    ips.shared.bff.v1.HealthStatus status = 2;
}